[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Fonts/vcr.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/PlayState.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/Icons/dad.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Icons/bf.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/healthBar.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Strums/4Key.tscn" type="PackedScene" id=6]
[ext_resource path="res://Transition/Transition.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Rating.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="PlayState" type="Node2D"]
script = ExtResource( 2 )

[node name="camGame" type="Camera2D" parent="."]
offset = Vector2( 640, 360 )
current = true
smoothing_enabled = true

[node name="camHUD" type="CanvasLayer" parent="."]
layer = 128

[node name="OpponentStrums" parent="camHUD" instance=ExtResource( 6 )]
position = Vector2( 162, 608 )

[node name="PlayerStrums" parent="camHUD" instance=ExtResource( 6 )]
position = Vector2( 782, 608 )

[node name="Notes" type="Node2D" parent="camHUD"]

[node name="HealthBar" type="Node2D" parent="camHUD"]

[node name="HealthBarBG" type="Sprite" parent="camHUD/HealthBar"]
position = Vector2( 640, 57 )
texture = ExtResource( 5 )

[node name="DadColor" type="ColorRect" parent="camHUD/HealthBar"]
margin_left = 346.0
margin_top = 52.0
margin_right = 935.0
margin_bottom = 62.0
color = Color( 0.686275, 0.4, 0.807843, 1 )

[node name="BFColor" type="ColorRect" parent="camHUD/HealthBar"]
margin_left = 346.0
margin_top = 52.0
margin_right = 935.0
margin_bottom = 62.0
rect_scale = Vector2( 0.5, 1 )
rect_pivot_offset = Vector2( 589, 0 )
color = Color( 0.192157, 0.690196, 0.819608, 1 )

[node name="IconP2" type="Sprite" parent="camHUD/HealthBar"]
position = Vector2( 589, 60 )
texture = ExtResource( 3 )
hframes = 3

[node name="IconP1" type="Sprite" parent="camHUD/HealthBar"]
position = Vector2( 701, 60 )
scale = Vector2( -1, 1 )
texture = ExtResource( 4 )
hframes = 3

[node name="ScoreText" type="RichTextLabel" parent="camHUD"]
margin_top = 96.0
margin_right = 1280.0
margin_bottom = 116.0
rect_pivot_offset = Vector2( 640, 10 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Score: 69420 // Misses: 0 // Accuracy: 100%"
text = "Score: 69420 // Misses: 0 // Accuracy: 100%"

[node name="RatingTemplate" parent="camHUD" instance=ExtResource( 8 )]
visible = false
position = Vector2( 844, 288 )

[node name="Misc" type="CanvasLayer" parent="."]

[node name="Transition" parent="Misc" instance=ExtResource( 7 )]
visible = false
